update -160px to -85px in margin-right of style.css to fix horizontal scroll

--- a/wp-content/themes/hotel-melbourne/style.css
+++ b/wp-content/themes/hotel-melbourne/style.css
@@ -2631,7 +2631,7 @@ td, th {
   margin: 0 40px;
 }
 .navbar .navbar-right {
-  margin-right: -160px;
+  margin-right: -85px;
 }
 .navbar-toggle {
   margin-right: 0 !important;
